--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <body>
     <header>
         <div id="site-logo">
-            <img src="" alt="">
-            <h3>Siza Tech Repairs</h3>
+            <div class="site-name">
+                <img src="" alt="">
+                <h3>Siza Tech Repairs</h3>
+            </div>
             <div class="menu">
                 <div class="bar"></div>
                 <div class="bar"></div>
